Color/hex code updates for BH branding (round 2)

--- a/custom-brightcove.css
+++ b/custom-brightcove.css
@@ -203,7 +203,7 @@ a {
   a strong {
     color: currentColor; }
   a:hover {
-    color: #ec008c; }
+    color: #524fa1; }
 
 code {
   background-color: whitesmoke;
